--- a/Scarb.toml
+++ b/Scarb.toml
@@ -7,3 +7,8 @@ version = "0.1.0"
 [dependencies]
 starknet = ">=2.3.1"
 openzeppelin = { git = "https://github.com/OpenZeppelin/cairo-contracts.git", tag = "v0.8.0" }
+
+[[target.starknet-contract]]
+sierra = true
+casm = true
+casm-add-pythonic-hints = true
